Pulled out css.

--- a/index.html
+++ b/index.html
@@ -3,27 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-
+  <title>EPL Books | Analysis</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-
-  <style media="screen">
-    #weekly-volume-chart svg g g.axis.y {
-      display: none;
-    }
-
-    .pad-left {
-      margin-left: 25px;
-    }
-
-    .indent-left {
-      margin-left: 40px;
-    }
-
-    #main-container {
-      margin-top: 60px;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
@@ -43,10 +25,10 @@
             <a href="#">About</a>
           </li>
         </ul>
-
       </div>
     </div>
   </div>
+
   <div id="main-container" class="container-fluid">
     <div class="row">
       <div class="pad-left" id="library-hold-chart">
@@ -64,6 +46,7 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-12">
         <div id="weekly-volume-chart">
@@ -76,6 +59,7 @@
         </div>
       </div>
     </div>
+    
     <div class="row">
       <div class="col-md-12">
         <p class="muted indent-left">select a time range to zoom in</p>
